tests/compile/shader_modules/rasterization_combinator.stderr
In file included from rasterization_combinator.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:8:
combinators.hpp:76:17: error: static assertion failed due to requirement 'is_vertex': rasterization combinator: arg@0 is not a vertex shader
   76 |                 static_assert(is_vertex, "rasterization combinator: arg@0 is not a vertex shader");
      |                               ^~~~~~~~~
rasterization_combinator.cpp:46:4: note: in instantiation of function template specialization 'rcgp::RasterizationCombinator<rcgp::Topology::eTriangleList>::operator()<rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3>>, rcgp::shader_stage<rcgp::ShaderStage::eVertex, rcgp::Smooth<rcgp::vector<float, 3>>, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>>' requested here
   46 |         } (fs, vs);
      |           ^
In file included from rasterization_combinator.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:8:
combinators.hpp:78:17: error: static assertion failed due to requirement 'is_fragment': rasterization combinator: arg@1 is not a fragment shader
   78 |                 static_assert(is_fragment, "rasterization combinator: arg@1 is not a fragment shader");
      |                               ^~~~~~~~~~~
combinators.hpp:80:17: error: static assertion failed due to requirement 'io_compatible': rasterization combinator: vertex shader outputs do not match fragment shader inputs
   80 |                 static_assert(io_compatible, "rasterization combinator: vertex shader outputs do not match fragment shader inputs");
      |                               ^~~~~~~~~~~~~
combinators.hpp:76:17: error: static assertion failed due to requirement 'is_vertex': rasterization combinator: arg@0 is not a vertex shader
   76 |                 static_assert(is_vertex, "rasterization combinator: arg@0 is not a vertex shader");
      |                               ^~~~~~~~~
rasterization_combinator.cpp:59:4: note: in instantiation of function template specialization 'rcgp::RasterizationCombinator<rcgp::Topology::eTriangleList>::operator()<rcgp::shader_stage<rcgp::ShaderStage::eCompute, void, rcgp::WorkGroup<1>>, rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3>>>' requested here
   59 |         } (cs, fs);
      |           ^
In file included from rasterization_combinator.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:8:
combinators.hpp:80:17: error: static assertion failed due to requirement 'io_compatible': rasterization combinator: vertex shader outputs do not match fragment shader inputs
   80 |                 static_assert(io_compatible, "rasterization combinator: vertex shader outputs do not match fragment shader inputs");
      |                               ^~~~~~~~~~~~~
combinators.hpp:80:17: error: static assertion failed due to requirement 'io_compatible': rasterization combinator: vertex shader outputs do not match fragment shader inputs
   80 |                 static_assert(io_compatible, "rasterization combinator: vertex shader outputs do not match fragment shader inputs");
      |                               ^~~~~~~~~~~~~
rasterization_combinator.cpp:75:4: note: in instantiation of function template specialization 'rcgp::RasterizationCombinator<rcgp::Topology::eTriangleList>::operator()<rcgp::shader_stage<rcgp::ShaderStage::eVertex, rcgp::Smooth<rcgp::vector<float, 3>>, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>, rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 2>>>' requested here
   75 |         } (vs, fs);
      |           ^
6 errors generated.
